--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "upload-preview",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "File upload/download example",
+  "main": "client.js",
+  "dependencies": {
+    "express": "^4.14.0",
+    "express-fileupload": "^0.0.5"
   },
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nicholasrq/ajax-download.git"
+  },
   "dependencies": {
     "express": "^4.14.0",
     "express-fileupload": "0.0.5"
-  }
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nicholasrq/ajax-download/issues"
+  },
+  "homepage": "https://github.com/nicholasrq/ajax-download#readme"
 }
