--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "client.js",
   "dependencies": {
     "express": "^4.14.0",
-    "express-fileupload": "^0.0.5"
+    "express-fileupload": "0.0.5",
+    "ws": "^1.1.1"
   },
   "devDependencies": {},
   "scripts": {
@@ -15,10 +16,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nicholasrq/ajax-download.git"
-  },
-  "dependencies": {
-    "express": "^4.14.0",
-    "express-fileupload": "0.0.5"
   },
   "author": "",
   "license": "ISC",
